feat: rota delete para admins
