# src/backend-web/docs/swagger.yaml
@@ -96,6 +96,50 @@ paths:
       summary: Criar um novo usuário
       tags:
       - Admin
+  /admin/users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Remove um usuário do sistema (Soft Delete). Requer privilégios
+        de administrador.
+      parameters:
+      - description: ID do Usuário
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "403":
+          description: Forbidden
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Deletar um usuário
+      tags:
+      - Admin
   /login:
     post:
       consumes:
